--- a/app/views/bling_points/home.html.haml
+++ b/app/views/bling_points/home.html.haml
@@ -7,5 +7,11 @@
     .progress-bar.progress-bar-success{ style: "width: #{point.percent}%", 'data-placement' => 'bottom', 'data-toggle' => 'tooltip', title: "#{number_to_currency(point.value)} (#{point.percent}%)" }
       %span.sr-only #{point.percent}%
 
+.text-center
+  = image_tag 'diamond-1.gif', alt: 'Bling!'
+  = image_tag 'diamond-1.gif', alt: 'Bling!'
+  = image_tag 'diamond-1.gif', alt: 'Bling!'
+  = image_tag 'diamond-1.gif', alt: 'Bling!'
+
 :javascript
   $('[data-toggle="tooltip"]').tooltip()
